[gd_scene load_steps=10 format=2]

[ext_resource path="res://Mapper/Mapper.gd" type="Script" id=1]
[ext_resource path="res://Mapper/MapEditor.gd" type="Script" id=2]
[ext_resource path="res://UI/Theme.tres" type="Theme" id=4]
[ext_resource path="res://Spriter/Tileset/TilesetControl.gd" type="Script" id=5]
[ext_resource path="res://Mapper/MapRenderer.gd" type="Script" id=6]
[ext_resource path="res://Spriter/TilesetSelector.tscn" type="PackedScene" id=7]
[ext_resource path="res://Mapper/NewMapLayerPopup.gd" type="Script" id=8]
[ext_resource path="res://Mapper/NewMapPopup.gd" type="Script" id=10]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.188235, 0.188235, 0.188235, 1 )
draw_center = false
border_width_top = 1
border_width_bottom = 1
border_color = Color( 0.313726, 0.313726, 0.313726, 1 )
anti_aliasing = false

[node name="Mapper" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 4 )
script = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer"]
margin_right = 320.0
margin_bottom = 240.0
size_flags_vertical = 3
custom_constants/separation = 0

[node name="MapList" type="HBoxContainer" parent="VBoxContainer/VBoxContainer"]
margin_right = 320.0
margin_bottom = 19.0

[node name="MapListButtons" type="HBoxContainer" parent="VBoxContainer/VBoxContainer/MapList"]
margin_bottom = 19.0

[node name="AddMapButton" type="Button" parent="VBoxContainer/VBoxContainer/MapList"]
margin_left = 4.0
margin_right = 24.0
margin_bottom = 19.0
rect_min_size = Vector2( 20, 0 )
size_flags_horizontal = 2
text = "+"

[node name="HSeparator" type="HSeparator" parent="VBoxContainer/VBoxContainer"]
margin_top = 19.0
margin_right = 320.0
margin_bottom = 23.0
custom_styles/separator = SubResource( 1 )

[node name="MapEditor" type="HBoxContainer" parent="VBoxContainer/VBoxContainer"]
margin_top = 23.0
margin_right = 320.0
margin_bottom = 240.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 1
script = ExtResource( 2 )

[node name="Map" type="VBoxContainer" parent="VBoxContainer/VBoxContainer/MapEditor"]
margin_right = 239.0
margin_bottom = 217.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 3.0
custom_constants/separation = 0

[node name="MapRenderer" type="Control" parent="VBoxContainer/VBoxContainer/MapEditor/Map"]
margin_right = 239.0
margin_bottom = 144.0
rect_clip_content = true
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 2.0
script = ExtResource( 6 )

[node name="mouse" type="Label" parent="VBoxContainer/VBoxContainer/MapEditor/Map/MapRenderer"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -95.0
margin_top = -23.0
margin_right = -7.0
margin_bottom = -10.0
text = "0,0"
align = 2

[node name="camera" type="Label" parent="VBoxContainer/VBoxContainer/MapEditor/Map/MapRenderer"]
margin_left = 8.0
margin_top = 3.0
margin_right = 96.0
margin_bottom = 16.0
text = "0,0"

[node name="Tilesets" type="VBoxContainer" parent="VBoxContainer/VBoxContainer/MapEditor/Map"]
margin_top = 144.0
margin_right = 239.0
margin_bottom = 217.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="TilesetSelector" parent="VBoxContainer/VBoxContainer/MapEditor/Map/Tilesets" instance=ExtResource( 7 )]
margin_right = 239.0
margin_bottom = 0.0

[node name="ScrollContainer" parent="VBoxContainer/VBoxContainer/MapEditor/Map/Tilesets/TilesetSelector" index="1"]
margin_right = 239.0
margin_bottom = 0.0

[node name="ButtonList" parent="VBoxContainer/VBoxContainer/MapEditor/Map/Tilesets/TilesetSelector/ScrollContainer" index="0"]
margin_right = 239.0

[node name="AddTilesetButton" parent="VBoxContainer/VBoxContainer/MapEditor/Map/Tilesets/TilesetSelector" index="3"]
visible = false
margin_left = 223.0
margin_right = 239.0

[node name="TilesetScroller" type="ScrollContainer" parent="VBoxContainer/VBoxContainer/MapEditor/Map/Tilesets"]
margin_top = 4.0
margin_right = 239.0
margin_bottom = 73.0
size_flags_horizontal = 3
size_flags_vertical = 3
follow_focus = true

[node name="TilesetControl" type="GridContainer" parent="VBoxContainer/VBoxContainer/MapEditor/Map/Tilesets/TilesetScroller"]
margin_right = 239.0
margin_bottom = 69.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/vseparation = 0
custom_constants/hseparation = 0
script = ExtResource( 5 )

[node name="MapOptions" type="VBoxContainer" parent="VBoxContainer/VBoxContainer/MapEditor"]
margin_left = 240.0
margin_right = 320.0
margin_bottom = 217.0
size_flags_horizontal = 3

[node name="Label" type="Label" parent="VBoxContainer/VBoxContainer/MapEditor/MapOptions"]
margin_right = 80.0
margin_bottom = 13.0
text = "MAP OPTIONS"
align = 1

[node name="LayersHeader" type="HBoxContainer" parent="VBoxContainer/VBoxContainer/MapEditor/MapOptions"]
margin_top = 17.0
margin_right = 80.0
margin_bottom = 36.0

[node name="LayersTitle" type="Label" parent="VBoxContainer/VBoxContainer/MapEditor/MapOptions/LayersHeader"]
margin_top = 3.0
margin_right = 37.0
margin_bottom = 16.0
text = "Layers:"

[node name="AddLayerButton" type="Button" parent="VBoxContainer/VBoxContainer/MapEditor/MapOptions/LayersHeader"]
margin_left = 62.0
margin_right = 80.0
margin_bottom = 19.0
rect_min_size = Vector2( 17, 17 )
size_flags_horizontal = 10
text = "+"

[node name="LayersList" type="VBoxContainer" parent="VBoxContainer/VBoxContainer/MapEditor/MapOptions"]
margin_top = 40.0
margin_right = 80.0
margin_bottom = 40.0

[node name="NewMapLayerPopup" type="WindowDialog" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -64.0
margin_top = -24.0
margin_right = 64.0
margin_bottom = 24.0
popup_exclusive = true
window_title = "Add Layer"
script = ExtResource( 8 )

[node name="MarginContainer" type="MarginContainer" parent="NewMapLayerPopup"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 4
custom_constants/margin_top = 4
custom_constants/margin_left = 4
custom_constants/margin_bottom = 4

[node name="VBoxContainer" type="VBoxContainer" parent="NewMapLayerPopup/MarginContainer"]
margin_left = 4.0
margin_top = 4.0
margin_right = 124.0
margin_bottom = 50.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="layer_name" type="HBoxContainer" parent="NewMapLayerPopup/MarginContainer/VBoxContainer"]
margin_right = 120.0
margin_bottom = 23.0
size_flags_horizontal = 3

[node name="Label" type="Label" parent="NewMapLayerPopup/MarginContainer/VBoxContainer/layer_name"]
margin_top = 5.0
margin_right = 28.0
margin_bottom = 18.0
text = "Name:"

[node name="NameField" type="LineEdit" parent="NewMapLayerPopup/MarginContainer/VBoxContainer/layer_name"]
margin_left = 32.0
margin_right = 120.0
margin_bottom = 23.0
size_flags_horizontal = 3
context_menu_enabled = false
virtual_keyboard_enabled = false
selecting_enabled = false
placeholder_text = "layer_name"
caret_blink = true

[node name="Buttons" type="HBoxContainer" parent="NewMapLayerPopup/MarginContainer/VBoxContainer"]
margin_top = 27.0
margin_right = 120.0
margin_bottom = 44.0
alignment = 1

[node name="AddButton" type="Button" parent="NewMapLayerPopup/MarginContainer/VBoxContainer/Buttons"]
margin_left = 29.0
margin_right = 51.0
margin_bottom = 17.0
text = "Add"

[node name="CancelButton" type="Button" parent="NewMapLayerPopup/MarginContainer/VBoxContainer/Buttons"]
margin_left = 55.0
margin_right = 91.0
margin_bottom = 17.0
text = "Cancel"

[node name="NewMapPopup" type="WindowDialog" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -104.0
margin_top = -64.0
margin_right = 104.0
margin_bottom = 64.0
popup_exclusive = true
window_title = "New Map"
script = ExtResource( 10 )

[node name="MarginContainer" type="MarginContainer" parent="NewMapPopup"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 4
custom_constants/margin_top = 4
custom_constants/margin_left = 4
custom_constants/margin_bottom = 4

[node name="VBoxContainer" type="VBoxContainer" parent="NewMapPopup/MarginContainer"]
margin_left = 4.0
margin_top = 4.0
margin_right = 204.0
margin_bottom = 124.0
custom_constants/separation = 4

[node name="MapName" type="HBoxContainer" parent="NewMapPopup/MarginContainer/VBoxContainer"]
margin_right = 200.0
margin_bottom = 23.0

[node name="Label" type="Label" parent="NewMapPopup/MarginContainer/VBoxContainer/MapName"]
margin_top = 5.0
margin_right = 98.0
margin_bottom = 18.0
size_flags_horizontal = 3
text = "Name:"

[node name="mapNameValue" type="LineEdit" parent="NewMapPopup/MarginContainer/VBoxContainer/MapName"]
margin_left = 102.0
margin_right = 200.0
margin_bottom = 23.0
size_flags_horizontal = 3
context_menu_enabled = false
virtual_keyboard_enabled = false
placeholder_text = "map_name"
caret_blink = true

[node name="TileSize" type="HBoxContainer" parent="NewMapPopup/MarginContainer/VBoxContainer"]
margin_top = 27.0
margin_right = 200.0
margin_bottom = 44.0

[node name="Label" type="Label" parent="NewMapPopup/MarginContainer/VBoxContainer/TileSize"]
margin_top = 2.0
margin_right = 98.0
margin_bottom = 15.0
size_flags_horizontal = 3
text = "Tile Size:"

[node name="tilesizeValue" type="OptionButton" parent="NewMapPopup/MarginContainer/VBoxContainer/TileSize"]
margin_left = 102.0
margin_right = 200.0
margin_bottom = 17.0
size_flags_horizontal = 3
shortcut_in_tooltip = false
text = "32x32 px"
align = 1

[node name="MapSize" type="VBoxContainer" parent="NewMapPopup/MarginContainer/VBoxContainer"]
margin_top = 48.0
margin_right = 200.0
margin_bottom = 88.0

[node name="Label" type="Label" parent="NewMapPopup/MarginContainer/VBoxContainer/MapSize"]
margin_right = 200.0
margin_bottom = 13.0
size_flags_horizontal = 3
text = "Map Size:"
align = 1

[node name="HBoxContainer" type="HBoxContainer" parent="NewMapPopup/MarginContainer/VBoxContainer/MapSize"]
margin_top = 17.0
margin_right = 200.0
margin_bottom = 40.0
alignment = 1

[node name="mapWidthValue" type="SpinBox" parent="NewMapPopup/MarginContainer/VBoxContainer/MapSize/HBoxContainer"]
margin_left = 7.0
margin_right = 93.0
margin_bottom = 23.0
min_value = 1.0
value = 50.0
rounded = true
allow_greater = true

[node name="Label" type="Label" parent="NewMapPopup/MarginContainer/VBoxContainer/MapSize/HBoxContainer"]
margin_left = 97.0
margin_top = 5.0
margin_right = 103.0
margin_bottom = 18.0
text = "x"

[node name="mapHeightValue" type="SpinBox" parent="NewMapPopup/MarginContainer/VBoxContainer/MapSize/HBoxContainer"]
margin_left = 107.0
margin_right = 193.0
margin_bottom = 23.0
min_value = 1.0
value = 50.0
rounded = true

[node name="Buttons" type="HBoxContainer" parent="NewMapPopup/MarginContainer/VBoxContainer"]
margin_top = 92.0
margin_right = 200.0
margin_bottom = 109.0
alignment = 1

[node name="AddButton" type="Button" parent="NewMapPopup/MarginContainer/VBoxContainer/Buttons"]
margin_left = 69.0
margin_right = 91.0
margin_bottom = 17.0
text = "Add"

[node name="CancelButton" type="Button" parent="NewMapPopup/MarginContainer/VBoxContainer/Buttons"]
margin_left = 95.0
margin_right = 131.0
margin_bottom = 17.0
text = "Cancel"

[editable path="VBoxContainer/VBoxContainer/MapEditor/Map/Tilesets/TilesetSelector"]
